--- a/404.html
+++ b/404.html
@@ -1,4 +1,3 @@
 <script>
-  var path = window.location.pathname;
-  window.location.replace('/website' + path);
+  window.location.replace(redirectTo + '/');
 </script>
