favicons and dom?

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
       name="description"
       content=""
     />
-    <link rel="apple-touch-icon" href="https://res.cloudinary.com/dg2t0sykk/image/upload/v1734309665/favicon_mspalq.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dg2t0sykk/image/upload/v1734309665/favicon-32x32_g2cls4.png" />
+    <link rel="icon" sizes="16x16" href="https://res.cloudinary.com/dg2t0sykk/image/upload/v1734309665/favicon_mspalq.ico" />
+    <link rel="apple-touch-icon" type="image/png" href="https://res.cloudinary.com/dg2t0sykk/image/upload/v1734309664/apple-touch-icon_pmnhwi.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
